--- a/JS_BTREE/example.html
+++ b/JS_BTREE/example.html
@@ -6,6 +6,7 @@
         <script src="tree.js"></script>
     </head>
     <body>
-        Open Javascript console to see an example.
+        <div id="output"></div>
     </body>
+    <script src="example.js"></script>
 </html>
